# qdrant-hackathon-2025

./: .gitignore  README.md  main.py  pyproject.toml  run.ipynb
data/: prepare.py
vecguard/: dataloader.py  vectorstore.py
vecguard/guards/: cav_router.py  lda_router.py  lease_router.py  pca_router.py  pcarouter.py  semanticrouter.py  steering_router.py
vecguard/pca_router/: models.py  router.py
