[project]
name = "qdrant-hackathon-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gqr>=0.0.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "ruff>=0.12.9",
    "ty>=0.0.1a18",
]
